--- a/download.html
+++ b/download.html
@@ -524,6 +524,35 @@ color:#fdf7a8;
 		&nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
 		<a target="_blank" href="https://sf2prime.github.io/"> <img src="sf2prime.png" height="64"> </a> 	
 	
+    	<br><font color="#0e0">Version 1.5</font> </a><br>
+		</td> 
+	
+		 <tr><td colspan="10" class="bodyTab">- Added Hits Combo counter </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Added "Tech Hit" message </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Back dash is slightly faster and cannot be performed in the corner of the screen where the priority is to defend </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Air Tatsu Ryu / Ken adjusted </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Improvement of dodges </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Fixed bug E.RYU and V.KEN </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Vega- invulnerability in the body when activating Fire Claw </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Character Swapping between Rounds only if SW(B6) Active </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- SF2HF Speed if SW(B7) Active </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Honda - adjusted Sumo Smash hurtbox, adjusted LK </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Guile - Reverse Spin Kick overhead </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Dhalsim - adjusted HP hitbox, close LP overhead </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Blanka - Rock Crush overhead </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Ken - adjusted LK </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Balrog - adjusted turn around, jumping MP/MK another animation </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Bison - adjusted CrHP hitbox </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Zangief - adjusted Hitbox MK, HK </td></tr> <br>
+         <tr><td colspan="10" class="bodyTab">- New cancellations of <a target="_blank" href="normal_cancel.png">Normals in Supers </a> </td></tr> <br>
+		 <br>	
+	
+	
+		<td class="bodyData">
+		<a target="_blank" href="downloads/1.4/sf2mix.zip"> <img src="download.png" height="64" width="64" title="system" align="top"><font color="#0e0">SF2MIX</font> </a> 
+	    &nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
+		<a target="_blank" href="downloads/1.4/sf2ce.zip"> <font color="#ee0">SF2CE</font> </a> 
+	
     	<br><font color="#0e0">Version 1.4</font> </a><br>
 		</td> 
 	
@@ -535,12 +564,13 @@ color:#fdf7a8;
 		 <tr><td colspan="10" class="bodyTab">- Chun-Li - Diagonal Jumping LK crossup </td></tr> <br>
 		 <tr><td colspan="10" class="bodyTab">- Guile - Diagonal Jumping LK crossup </td></tr> <br>
 		 <tr><td colspan="10" class="bodyTab">- Blanka - Diagonal Jumping LK crossup </td></tr> <br>
-		 <tr><td colspan="10" class="bodyTab">- Blanka -  adjusted extra hit HP </td></tr> <br>
+		 <tr><td colspan="10" class="bodyTab">- Blanka - adjusted extra hit HP </td></tr> <br>
 		 <tr><td colspan="10" class="bodyTab">- Sagat - Diagonal Jumping MK crossup </td></tr> <br>
 		 <tr><td colspan="10" class="bodyTab">- Ken - Diagonal Jumping MK crossup </td></tr> <br>
 		 <tr><td colspan="10" class="bodyTab">- Bison - adjusted  hitbox psychocrusher </td></tr> <br>
 		 <tr><td colspan="10" class="bodyTab">- Bison - adjusted Hitbox Crouching HP </td></tr> <br>
 		 <br>
+		
 		
 		<td class="bodyData">
 		<a target="_blank" href="downloads/1.3/sf2mix.zip"> <img src="download.png" height="64" width="64" title="system" align="top"><font color="#0e0">SF2MIX</font> </a> 
