--- a/download_br.html
+++ b/download_br.html
@@ -523,6 +523,32 @@ color:#fdf7a8;
 		&nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
 		<a target="_blank" href="https://sf2prime.github.io/"> <img src="sf2prime.png" height="64"> </a> 
 	
+    	<br><font color="#0e0">Version 1.5</font> </a><br>
+		</td> 
+	
+		<tr><td colspan="10" class="bodyTab">- Adicionado Contador de Hits Combo </td></tr> <br>  
+		<tr><td colspan="10" class="bodyTab">- Adicionado mensagem de "Tech Hit" </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- O back step um pouco mais rápido e não pode ser executado no canto da tela </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Air Tatsu Ryu / Ken ajustado </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Melhoria nas esquivas </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Corrigido o bug do E.RYU e V.KEN </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Vega - Invulnerabilidade no corpo ao ativar Fire Claw </td></tr> <br> 
+		<tr><td colspan="10" class="bodyTab">- Honda - Ajuste na área de impacto do Sumo Smash, Ajuste no LK </td></tr> <br> 
+		<tr><td colspan="10" class="bodyTab">- Guile - Chute Giratório Reverso é overhead </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Dhalsim - Ajuste na área de impacto do HP,  LP de perto é overhead </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Blanka - Ajuste no Rock Crush para overhead </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Ken - Ajuste no LK </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Balrog - Ajuste no turn around, Pular MP/MK, com outra animação </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Bison - Ajuste no hibox HP abaixado </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Zangief - Ajuste hitbox MK, HK </td></tr> <br>
+		<tr><td colspan="10" class="bodyTab">- Novos cancelamentos de <a target="_blank" href="normal_cancel.png">Normais em Supers </a> </td></tr> <br>
+		 <br>
+		
+		<td class="bodyData">
+		<a target="_blank" href="downloads/1.4/sf2mix.zip"> <img src="download.png" height="64" width="64" title="system" align="top"><font color="#0e0">SF2MIX</font> </a> 
+	    &nbsp;&nbsp;&nbsp; <font color="#FFF">/</font> &nbsp;&nbsp;&nbsp;
+		<a target="_blank" href="downloads/1.4/sf2ce.zip"> <font color="#ee0">SF2CE</font> </a> 		
+	
     	<br><font color="#0e0">Version 1.4</font> </a><br>
 		</td> 
 	
