--- a/selecao.html
+++ b/selecao.html
@@ -536,7 +536,7 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Random 1x - <font color="#0dc">3 socos</font> <font color="#dd0"> (randômico apenas uma vez) </font></td></tr> 
 			<tr><td colspan="10" class="bodyTab">- Modo Exibição - <font color="#0dc">3 chutes </font> <font color="#dd0"> (CPU x CPU) </font> </td></tr>
 			<tr><td colspan="10" class="bodyTab">- Modo Completo - <font color="#0dc">segurar Baixo ao escolher </font> <font color="#dd0">(Falso 3d, Carro na Índia, Cenários de bônus randômicos, posição inicial randômica) </font> </td></tr>
-			<tr><td colspan="10" class="bodyTab">- Modo Clássico - <font color="#0dc">segurar Baixo + 3 chutes ao escolher </font> <font color="#dd0">(Desabilita troca de personagens durante os rounds, desabilita o modo Completo) </font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">- Modo Clássico - <font color="#0dc">segurar Baixo + 3 chutes ao escolher </font> <font color="#dd0">(desabilita o modo Completo) </font> </td></tr>
 		
 			
         </tbody></table>
