--- a/select.html
+++ b/select.html
@@ -539,7 +539,7 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Random 1x - <font color="#0dc">3 punches</font> <font color="#dd0"> (random only once) </font></td></tr> 
 			<tr><td colspan="10" class="bodyTab">- Exhibition Mode - <font color="#0dc">3 kicks </font> <font color="#dd0"> (CPU x CPU) </font> </td></tr>
 			<tr><td colspan="10" class="bodyTab">- Complete Mode - <font color="#0dc">holding DOWN </font> <font color="#dd0">(False 3d, car in India, Random bonus stages, Random start position) </font> </td></tr>
-			<tr><td colspan="10" class="bodyTab">- Classic Mode - <font color="#0dc">holding DOWN + 3 kicks on the select screen</font> <font color="#dd0">(Disables character switching during rounds, disable Complete Mode) </font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">- Classic Mode - <font color="#0dc">holding DOWN + 3 kicks on the select screen</font> <font color="#dd0">(Disable Complete Mode) </font> </td></tr>
 					
         </tbody></table>
 		
