--- a/sistema.html
+++ b/sistema.html
@@ -546,6 +546,7 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Pulo longo <font color="#dd0">(rapidamente baixo -> cima)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Corrida <font color="#dd0">(Frente + Frente)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Recuar <font color="#dd0">(Trás + Trás)</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">- Novos cancelamentos de <a target="_blank" href="normal_cancel.png">Normais em Supers </a> </td></tr> <br>
 			<tr><td colspan="10" class="bodyTab">- Troca de Personagens entre os Round se <font color="#dd0"> SW(B6) estiver ativo 
 			<br> (segurando Start + botão correspondente)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Velocidade da SF2HF se <font color="#dd0"> SW(B7) estiver ativo 
