--- a/system.html
+++ b/system.html
@@ -547,6 +547,7 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">- Long Jump <font color="#dd0"> (quickly down -> up)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Run <font color="#dd0">(forward + forward)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- Backstep <font color="#dd0">(back + back)</font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">- New cancellations of <a target="_blank" href="normal_cancel.png">Normals in Supers </a> </td></tr> <br>
 			<tr><td colspan="10" class="bodyTab">- Character Swapping between Rounds if <font color="#dd0"> SW(B6) Active 
 			<br>(by holding Start + corresponding button)</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">- SF2HF rom speed if <font color="#dd0"> SW(B7) Active 
