--- a/system.html
+++ b/system.html
@@ -582,7 +582,7 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>
 			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>	
 	
-			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B6) </font> (Enable character switching during rounds)</td></tr>
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Change between Rounds: </font>Turn ON, <font color="#dd0"> SW(B6) </font> (Enable character switching during rounds)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b6.png" height="300"></a> </img></td></tr>			
 			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>	
 	
