--- a/system.html
+++ b/system.html
@@ -578,7 +578,7 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b4.png"> <img src="dip-b4.png" height="300"> </a></img></td></tr>
             <tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			
-			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B5) </font> (disable Complete Mode with code)</td></tr>
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Disable Classic Mode: </font>Turn ON, <font color="#dd0"> SW(B5) </font> (disable Complete Mode via code)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>
 			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>	
 	
