--- a/sistema.html
+++ b/sistema.html
@@ -577,7 +577,7 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b4.png"> <img src="dip-b4.png" height="300"> </a></img></td></tr>	
 			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>
 			
-			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Modo Clássico: </font>Habilitar, <font color="#dd0"> SW(B5) </font> (Desabilita o modo Completo ao usar o código)</td></tr>
+			<tr><td colspan="10" class="bodyTab">- <font color="#dd0"> Desabilita Modo Clássico: </font>Habilitar, <font color="#dd0"> SW(B5) </font> (Desabilita o modo Completo ao usar o código)</td></tr>
 			<tr><td colspan="10" class="bodyTab"><a target="_blank" href="dip-b5.png"> <img src="dip-b5.png" height="300"></a> </img></td></tr>
 			<tr><td colspan="10" class="bodyTab"> &nbsp;</td></tr>	
 			
