--- a/sf2cejc.html
+++ b/sf2cejc.html
@@ -16,11 +16,11 @@
         <script>
             EJS_player = "#game";
             EJS_core = "arcade";
-            EJS_gameName = "sf2ce";
+            EJS_gameName = "sf2cejc";
             EJS_color = "#000000";
             EJS_startOnLoaded = true;
 			EJS_fullscreenOnLoad = true;
-            EJS_pathtodata = "https://sf2mix.github.io/data/";
+            EJS_pathtodata = "https://cdn.emulatorjs.org/stable/data/";
             EJS_gameUrl = "https://sf2mix.github.io/downloads/beta/sf2cejc.zip";
 			EJS_VirtualGamepadSettings = [
 				{"type":"button","text":"4","id":"a","location":"right","right":145,"top":80,"bold":true,"input_value":0},
